--- a/Face_Blur_Google_Cloud_Vision_API.ipynb
+++ b/Face_Blur_Google_Cloud_Vision_API.ipynb
@@ -73,10 +73,10 @@
         "! gcloud auth login\n",
         "\n",
         "# set project\n",
-        "PROJECT_ID = \"ap-alto-ml-1000\" #@param {type:\"string\"}\n",
+        "PROJECT_ID = \"your-project-here\" #@param {type:\"string\"}\n",
         "!gcloud config set project {PROJECT_ID}\n",
         "\n",
-        "YOUR_BUCKET = \"gs://bkt-us-central1-data\" #@param {type:\"string\"}\n",
+        "YOUR_BUCKET = \"gs://your-bucket-here\" #@param {type:\"string\"}\n",
         "\n",
         "def getproject():\n",
         "  p = !gcloud config get-value project\n",
@@ -108,7 +108,7 @@
       "source": [
         "# create a service account key file and upload\n",
         "# how to -> https://cloud.google.com/iam/docs/keys-create-delete#creating\n",
-        "credentials = service_account.Credentials.from_service_account_file('/content/ap-alto-ml-1000-38a3a30ee47e.json')"
+        "credentials = service_account.Credentials.from_service_account_file('/content/sa-1000-30ee47e.json')"
       ],
       "metadata": {
         "id": "-vjKzU38sihs"
@@ -136,7 +136,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Copying gs://bkt-us-central1-data/faces.jpg...\n",
+            "Copying gs://your-bucket-here/faces.jpg...\n",
             "/ [0 files][    0.0 B/ 74.6 KiB]                                                \r/ [1 files][ 74.6 KiB/ 74.6 KiB]                                                \r\n",
             "Operation completed over 1 objects/74.6 KiB.                                     \n"
           ]
