--- a/generative-ai/seed_param_notebook.ipynb
+++ b/generative-ai/seed_param_notebook.ipynb
@@ -100,7 +100,7 @@
     "    , \"top_p\": 0.95\n",
     "    , \"max_output_tokens\": 8192\n",
     "    #####################################################\n",
-    "    # this is the parameter that help with consistency \n",
+    "    # this is the parameter that helps with consistency \n",
     "    #####################################################\n",
     "    , \"seed\": 54321   \n",
     "}\n",
