--- a/vision/localize_objects.ipynb
+++ b/vision/localize_objects.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "image_path = \"fanatics_items.png\"\n",
+    "image_path = \"pic_of_items.png\"\n",
     "bounding_boxes = localize_objects(image_path)\n",
     "draw_bounding_boxes(image_path, bounding_boxes)"
    ]
